plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

repositories {
	maven {url = "https://maven.gegy.dev"}
	maven {url = 'https://maven.blamejared.com/' }
	maven {url = "https://mvn.devos.one/releases/" }
	maven {url = "https://api.modrinth.com/maven" }
	maven {url = "https://maven.theillusivec4.top/"}
	maven {url = "https://maven.jamieswhiteshirt.com/libs-release"}
	maven {url = 'https://maven.ladysnake.org/releases'}
	maven {url = "https://maven.shedaniel.me/" }
	maven {url = "https://maven.terraformersmc.com/"}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	api "com.terraformersmc:modmenu:20.0.0-beta.4"
	api("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_version}") {
		exclude(group: "net.fabricmc.fabric-api")
	}
	// The API of LambDynamicLights.
	compileOnly("dev.lambdaurora.lambdynamiclights:lambdynamiclights-api:${project.lambdynlights_version}")


	implementation("maven.modrinth:trinkets-updated:${project.trinkets_version}")
	implementation "org.ladysnake.cardinal-components-api:cardinal-components-base:${project.cca_version}"
	implementation "org.ladysnake.cardinal-components-api:cardinal-components-entity:${project.cca_version}"

	localRuntime("maven.modrinth:trinkets-updated:${project.trinkets_version}")
	localRuntime("dev.lambdaurora.lambdynamiclights:lambdynamiclights-runtime:${project.lambdynlights_version}")

}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
